[package]
authors = ["Pendulum Chain <https://github.com/pendulum-chain>"]
description = "Issue module"
edition = "2021"
name = "issue"
version = "1.0.11"

[dependencies]
hex = { version = "0.4.3", default-features = false, features = ['alloc'] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }

# Substrate dependencies
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false, optional = true }

# Parachain dependencies
currency = { path = "../currency", default-features = false }
fee = { path = "../fee", default-features = false }
oracle = { path = "../oracle", default-features = false }
security = { path = "../security", default-features = false }
stellar-relay = { path = "../stellar-relay", default-features = false }
vault-registry = { path = "../vault-registry", default-features = false }

primitives = { package = "spacewalk-primitives", path = "../../primitives", default-features = false }

# Orml dependencies
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false, optional = true }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false, optional = true }

[dev-dependencies]
mocktopus = "0.8.0"
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0"}
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
nomination = {path = "../nomination"}

currency = { path = "../currency", features = ['testing-utils', 'testing-constants'] }
pooled-rewards = { path = "../pooled-rewards" }
reward = { path = "../reward" }
reward-distribution = { path = "../reward-distribution" }
staking = { path = "../staking" }
stellar-relay = { path = "../stellar-relay", features = ['testing-utils'] }
security = { path = "../security", features = ['testing-utils'] }
oracle = { path = "../oracle", features = ['testing-utils'] }

# Orml dependencies
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0" }


[features]
default = ["std"]
std = [
    "hex/std",
    "codec/std",
    "sp-core/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "currency/std",
    "fee/std",
    "oracle/std",
    "primitives/std",
    "security/std",
    "stellar-relay/std",
    "vault-registry/std",
    "nomination/std"
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "orml-traits",
    "orml-currencies",
    "currency/runtime-benchmarks",
    "currency/testing-constants",
    "stellar-relay/testing-utils",
    "security/testing-utils",
    "oracle/testing-utils"
]
try-runtime = [
    "frame-system/try-runtime",
    "currency/try-runtime",
    "fee/try-runtime",
    "stellar-relay/try-runtime",
    "vault-registry/try-runtime",
    "orml-currencies/try-runtime",
    "security/try-runtime",
    "oracle/try-runtime",
]
