[package]
name = "nomination"
version = "1.0.13"
authors = ["Pendulum"]
edition = "2021"

[dependencies]
codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }

# Substrate dependencies
sp-std = { workspace = true }

frame-support = { workspace = true}
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }

# Parachain dependencies
currency = { path = "../currency", default-features = false }
security = { path = "../security", default-features = false }
vault-registry = { path = "../vault-registry", default-features = false }
fee = { path = "../fee", default-features = false }
oracle = { path = "../oracle", default-features = false, optional = true }
staking = { path = "../staking", default-features = false }

primitives = { package = "spacewalk-primitives", path = "../../primitives", default-features = false }

# Orml dependencies
orml-tokens = { workspace = true, optional = true }
orml-traits = { workspace = true, optional = true }

[dev-dependencies]
mocktopus.workspace = true
frame-benchmarking = { workspace = true, default-features = true }
pallet-balances = { workspace = true, default-features = true }
pallet-timestamp = { workspace = true, default-features = true }
sp-arithmetic = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }

currency = { path = "../currency", features = ["testing-constants"] }
security = { path = "../security", features = ['testing-utils'] }
pooled-rewards = { path = "../pooled-rewards" }
reward-distribution = { path = "../reward-distribution" }

# Orml dependencies
orml-currencies = { workspace = true, default-features = true }
orml-traits = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "currency/std",
    "security/std",
    "vault-registry/std",
    "fee/std",
    "staking/std",
    "primitives/std"
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "orml-tokens",
    "orml-traits",

    "currency/runtime-benchmarks",
    "currency/testing-constants",
    "security/testing-utils",
    "oracle/testing-utils"
]

try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-timestamp/try-runtime",
    "currency/try-runtime",
    "security/try-runtime",
    "vault-registry/try-runtime",
    "fee/try-runtime",
    "pooled-rewards/try-runtime",
    "staking/try-runtime",
    "orml-currencies/try-runtime",
    "reward-distribution/try-runtime",
]
