[package]
name = "oracle"
version = "1.0.11"
authors = ["Pendulum"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }

# Substrate dependencies
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false, optional = true }

frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false, optional = true }

pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

orml-oracle = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }
dia-oracle = { git = "https://github.com/pendulum-chain/oracle-pallet", branch = "polkadot-v1.1.0", default-features = false }

# Parachain dependencies
security = { path = "../security", default-features = false }
primitives = { package = "spacewalk-primitives", path = "../../primitives", default-features = false }
currency = { path = "../currency", default-features = false }

# Testing dependencies
spin = { version = "0.9.4", features = ["mutex"], optional = true }
once_cell = { version = "1.18.0", default-features = false, features = ["alloc", "race"], optional = true }

[dev-dependencies]
mocktopus = "0.8.0"

currency = { path = "../currency", default-features = false, features = ["testing-constants"] }
security = { path = "../security", features = ['testing-utils'] }
staking = { path = "../staking", default-features = false }

# Orml dependencies
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }

pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-timestamp/std",
    "security/std",
    "currency/std",
    "primitives/std",
    "orml-currencies/std",
    "orml-tokens/std",
    "orml-traits/std",
    "orml-oracle/std",
    "dia-oracle/std",

]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "currency/runtime-benchmarks",
    "currency/testing-constants",
    "security/testing-utils",
    "testing-utils"
]
testing-utils = ["spin", "once_cell", "sp-arithmetic"]

try-runtime = [
    "frame-system/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-timestamp/try-runtime",
    "security/try-runtime",
    "staking/try-runtime",
    "currency/try-runtime",
    "orml-currencies/try-runtime",
    "orml-tokens/try-runtime",
    "orml-oracle/try-runtime",
    "dia-oracle/try-runtime",
]
