[package]
name = "oracle"
version = "1.0.13"
authors = ["Pendulum"]
edition = "2021"

[dependencies]
codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = {  workspace = true, features = ["derive"] }

# Substrate dependencies
sp-std = { workspace = true }
sp-arithmetic = { workspace = true, optional = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }

pallet-timestamp = { workspace = true }

orml-oracle = { workspace = true }
dia-oracle = { workspace = true }

# Parachain dependencies
security = { path = "../security", default-features = false }
primitives = { package = "spacewalk-primitives", path = "../../primitives", default-features = false }
currency = { path = "../currency", default-features = false }

# Testing dependencies
spin = { workspace = true, features = ["mutex"], optional = true }
once_cell = { workspace = true, features = ["alloc", "race"], optional = true }

[dev-dependencies]
mocktopus.workspace = true
currency = { path = "../currency", features = ["testing-constants"] }
security = { path = "../security", features = ['testing-utils'] }
staking = { path = "../staking" }

# Orml dependencies
orml-currencies = { workspace = true, default-features = true }
orml-tokens = { workspace = true, default-features = true }
orml-traits = { workspace = true, default-features = true }

pallet-balances = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"currency/std",
	"dia-oracle/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"once_cell?/std",
	"orml-currencies/std",
	"orml-oracle/std",
	"orml-tokens/std",
	"orml-traits/std",
	"pallet-timestamp/std",
	"primitives/std",
	"scale-info/std",
	"security/std",
	"sp-arithmetic?/std",
	"sp-std/std",
	"spin?/std",
]
runtime-benchmarks = [
	"currency/runtime-benchmarks",
	"currency/testing-constants",
	"dia-oracle/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"orml-tokens/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"security/testing-utils",
	"staking/runtime-benchmarks",
	"testing-utils",
]
testing-utils = [ "once_cell", "sp-arithmetic", "spin" ]

try-runtime = [
	"currency/try-runtime",
	"dia-oracle/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"orml-currencies/try-runtime",
	"orml-oracle/try-runtime",
	"orml-tokens/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-timestamp/try-runtime",
	"security/try-runtime",
	"staking/try-runtime",
]
