[package]
authors = ["Pendulum Chain <https://github.com/pendulum-chain>"]
description = "Pooled Reward module"
edition = "2021"
name = "pooled-rewards"
version = "1.0.15"

[dependencies]
codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }

# Parachain dependencies
primitives = { package = "spacewalk-primitives", path = "../../primitives", default-features = false }

# Substrate dependencies
sp-arithmetic = { workspace = true }
sp-std = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }

[dev-dependencies]
mocktopus.workspace = true
rand.workspace = true
frame-benchmarking = { workspace = true, default-features = true}
pallet-timestamp = { workspace = true, default-features = true}
currency = { path = "../currency", features = ["testing-constants"] }
sp-core = { workspace = true, default-features = true}
sp-io = { workspace = true, default-features = true}

[features]
default = [ "std" ]
std = [
	"codec/std",
	"currency/std",
	"frame-support/std",
	"frame-system/std",
	"primitives/std",
	"scale-info/std",
	"sp-arithmetic/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"currency/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
]

try-runtime = [
	"currency/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-timestamp/try-runtime",
]
