[package]
authors = ["Pendulum Chain <https://github.com/pendulum-chain>"]
description = "Redeem module"
edition = "2021"
name = "redeem"
version = "1.0.13"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
hex = { version = "0.4.3", default-features = false,  features = ['alloc']  }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }

# Substrate dependencies
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false, optional = true }

# Parachain dependencies
currency = { path = "../currency", default-features = false }
fee = { path = "../fee", default-features = false }
oracle = { path = "../oracle", default-features = false }
security = { path = "../security", default-features = false }
stellar-relay = { path = "../stellar-relay", default-features = false }
vault-registry = { path = "../vault-registry", default-features = false }

primitives = { package = "spacewalk-primitives", path = "../../primitives", default-features = false }

# Orml dependencies
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false, optional = true }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false, optional = true }

[dev-dependencies]
mocktopus.workspace = true
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0"}
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }

# Parachain dependencies
pooled-rewards = { path = "../pooled-rewards" }
staking = { path = "../staking" }
currency = { path = "../currency", features = ["testing-constants", "testing-utils"] }
stellar-relay = { path = "../stellar-relay", features = ["testing-utils"] }
security = { path = "../security", features = ['testing-utils'] }
oracle = { path = "../oracle", features = ['testing-utils'] }
reward-distribution = { path = "../reward-distribution" }

# Orml dependencies
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0" }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0" }

[features]
default = ["std"]
std = [
    "hex/std",
    "codec/std",
    "sp-core/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "pooled-rewards/std",
    "currency/std",
    "fee/std",
    "oracle/std",
    "security/std",
    "stellar-relay/std",
    "vault-registry/std",
    "primitives/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "orml-tokens",
    "orml-traits",
    "stellar-relay/testing-utils",
    "security/testing-utils",
    "oracle/testing-utils",
    "currency/runtime-benchmarks",
    "currency/testing-constants",

]

try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pooled-rewards/try-runtime",
    "currency/try-runtime",
    "fee/try-runtime",
    "oracle/try-runtime",
    "security/try-runtime",
    "stellar-relay/try-runtime",
    "vault-registry/try-runtime",
    "orml-currencies/try-runtime",
    "orml-tokens/try-runtime",
]
