[package]
authors = ["Pendulum Chain <https://github.com/pendulum-chain>"]
description = "Redeem module"
edition = "2021"
name = "redeem"
version = "1.0.13"

[dependencies]
codec = { workspace = true, features = ["derive", "max-encoded-len"] }
hex = {workspace = true,  features = ['alloc']  }
scale-info = { workspace = true, features = ["derive"] }
log = { workspace = true }

# Substrate dependencies
sp-core = { workspace = true }
sp-std = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }

# Parachain dependencies
currency = { path = "../currency", default-features = false }
fee = { path = "../fee", default-features = false }
oracle = { path = "../oracle", default-features = false }
security = { path = "../security", default-features = false }
stellar-relay = { path = "../stellar-relay", default-features = false }
vault-registry = { path = "../vault-registry", default-features = false }

primitives = { package = "spacewalk-primitives", path = "../../primitives", default-features = false }

# Orml dependencies
orml-tokens = { workspace = true, optional = true }
orml-traits = { workspace = true, optional = true }

[dev-dependencies]
mocktopus.workspace = true
frame-benchmarking = { workspace = true, default-features = true }
pallet-balances = { workspace = true, default-features = true }
pallet-timestamp = { workspace = true, default-features = true }
sp-arithmetic = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }

# Parachain dependencies
pooled-rewards = { path = "../pooled-rewards" }
staking = { path = "../staking" }
currency = { path = "../currency", features = ["testing-constants", "testing-utils"] }
stellar-relay = { path = "../stellar-relay", features = ["testing-utils"] }
security = { path = "../security", features = ['testing-utils'] }
oracle = { path = "../oracle", features = ['testing-utils'] }
reward-distribution = { path = "../reward-distribution" }

# Orml dependencies
orml-currencies = { workspace = true, default-features = true }
orml-tokens = { workspace = true, default-features = true }
orml-traits = { workspace = true, default-features = true }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"currency/std",
	"fee/std",
	"frame-support/std",
	"frame-system/std",
	"hex/std",
	"log/std",
	"oracle/std",
	"pooled-rewards/std",
	"primitives/std",
	"scale-info/std",
	"security/std",
	"sp-core/std",
	"sp-std/std",
	"stellar-relay/std",
	"vault-registry/std",
]
runtime-benchmarks = [
	"currency/runtime-benchmarks",
	"currency/testing-constants",
	"fee/runtime-benchmarks",
	"frame-benchmarking",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"oracle/runtime-benchmarks",
	"oracle/testing-utils",
	"orml-tokens",
	"orml-tokens?/runtime-benchmarks",
	"orml-traits",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pooled-rewards/runtime-benchmarks",
	"reward-distribution/runtime-benchmarks",
	"security/testing-utils",
	"staking/runtime-benchmarks",
	"stellar-relay/runtime-benchmarks",
	"stellar-relay/testing-utils",
	"vault-registry/runtime-benchmarks",
]

try-runtime = [
	"currency/try-runtime",
	"fee/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"oracle/try-runtime",
	"orml-currencies/try-runtime",
	"orml-tokens/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-timestamp/try-runtime",
	"pooled-rewards/try-runtime",
	"reward-distribution/try-runtime",
	"security/try-runtime",
	"staking/try-runtime",
	"stellar-relay/try-runtime",
	"vault-registry/try-runtime",
]
